web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-react-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-react-app
  template:
    metadata:
      labels:
        app: nginx-react-app
    spec:
      serviceAccount: s3-access-sa-web
      containers:
      - name: nginx-react-app
        image: 853963783084.dkr.ecr.ap-northeast-2.amazonaws.com/frontend:126
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        lifecycle:
          preStop:
            exec:
              command: ["/bin/bash", "-c", "sleep 40"]
        livenessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 4
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
      readinessGates:
      - conditionType: target-health.alb.ingress.k8s.aws/nginx-react-app-ingress_nginx-react-app-service_80
      terminationGracePeriodSeconds: 60
