web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-react-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-react-app
